# agoge

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  license.txt  readme.md
.github/workflows/: linux-build.yml  main.yml
app/: CMakeLists.txt  main.c
core/: CMakeLists.txt  bus.c  bus.h  cart.c  cart.h  cpu-defs.h  cpu.c  cpu.h  ctx.c  defs.h  disasm.c  disasm.h  log.c  log.h
core/doc/: Doxyfile
core/include/agoge/: bus.h  cart-mbc1.h  cart.h  cpu.h  ctx.h  disasm.h  log.h  sched.h  timer.h
core/src/: CMakeLists.txt  agoge-bus.c  agoge-bus.h  agoge-cart-mbc1.c  agoge-cart-mbc1.h  agoge-cart.c  agoge-cart.h  agoge-compiler.h  agoge-cpu-defs.h  agoge-cpu.c  agoge-cpu.h  agoge-ctx.c  agoge-disasm.c  agoge-log.c  agoge-log.h  agoge-sched.c  agoge-sched.h  agoge-timer.c  agoge-timer.h  bus.c  bus.h  cart.c  comp.h  cpu-defs.h  cpu.c  cpu.h  ctx.c  defs.h  disasm.c  disasm.h  log.c  log.h  util.h
doc/: Doxyfile
include/agogecore/: bus.h  cart.h  cpu.h  ctx.h  disasm.h  log.h
